fixed spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header h3 { font-family: 'CubanoRegular'; color: #ce6300; font-size: 2.0em; }
 .venue section h3 a { text-decoration: none; }
 .venue section small a { font-size: 1.5em; color: white }
 #speakers{ background: url(../images/bg_wings3.png) no-repeat center center; max-width: 541px; height: 171px; background-size: 95%; line-height: 4.5em; }
-.speakers .speaker, .sponsors section { padding: 0 0 2em; text-align: center; font-size: 1.4em;  text-shadow: none; min-height: 500px}
+.speakers .speaker, .sponsors section, .venue section { padding: 0 0 2em; text-align: center; font-size: 1.4em;  text-shadow: none; min-height: 500px}
 .speakers .speaker img { height: 200px; width: 200px; border: 0; border-radius: 200px; margin-bottom: 20px }
 .speakers .speaker .name{display: block;}
 .speakers .speaker .caption{display: block; font-size: 0.6em; font-family: Helvetica, Verdana, sans-serif; font-weight: bold; color: #069; text-transform: uppercase;}
@@ -57,7 +57,7 @@ header h3 { font-family: 'CubanoRegular'; color: #ce6300; font-size: 2.0em; }
 .speakers .speaker p, .sponsors p { font-family: Helvetica, Verdana, sans-serif; text-align: justify; font-size: 0.7em; display: block; padding: 0 5px }
 .sponsors p { font-weight: bold }
 .speakers .speaker p a {display: inline; text-decoration: underline}
-#call4proposals { height: 200px; padding: 5em 0; }
+#call4proposals { min-height: 200px; padding: 5em 0; }
 #call4proposals h3 { max-width: 360px; line-height: 0.9em; text-indent: -9999px; background: url(../images/call4proposals.png) no-repeat center center; height: 131px; background-size: 90%; }
 #call4proposals p { margin-top: 1em; font-size: 1.7em; line-height: 1em }
 footer.container { text-align: center; margin: 15em auto;}
